Add full structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,100 @@
     <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
 <body>
+    <section class="user-card-section">
+        <article class="user-card">
+            <img class="user-card-photo" src="./assets/img/profile_photo_boy.jpg" alt="Profile photo Michael Deo">
+            <div class="user-info">
+                <div>
+                    <h2 class="user-name"><span>Michael</span> Deo</h2>
+                    <div class="user-proffesion">Ui UX Designer</div>
+                    <p class="user-location">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta suscipit expedita a fugiat animi, obcaecati rem nobis id pariatur nostrum, consequatur, ea asperiores doloribus perferendis consectetur. Aliquid aspernatur minima vitae.</p>
+                </div>
+                <footer class="user-socials">
+                    <div>
+                        <button class="user-socials-btn">Follow</button>
+                        <button class="user-socials-btn">Message</button>
+                    </div>
+                    <ul class="user-socials-list">
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-behance"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    </ul>
+                </footer>
+            </div>
+        </article>
+        <article class="user-card">
+            <img class="user-card-photo" src="./assets/img/profile_photo_girl.jpg" alt="Profile photo Jessica Deo">
+            <div class="user-info">
+                <div>
+                    <h2 class="user-name"><span>Jessica</span> Deo</h2>
+                    <div class="user-proffesion">Ui UX Designer</div>
+                    <p class="user-location">795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
+                </div>
+                <footer class="user-socials">
+                    <div>
+                        <button class="user-socials-btn">Follow</button>
+                        <button class="user-socials-btn">Message</button>
+                    </div>
+                    <ul class="user-socials-list">
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-behance"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    </ul>
+                </footer>
+            </div>
+        </article>
+        <article class="user-card">
+            <img class="user-card-photo" src="./assets/img/profile_photo_teenage_girl.jpg" alt="Profile photo Anna Deo">
+            <div class="user-info">
+                <div>
+                    <h2 class="user-name"><span>Anna</span> Deo</h2>
+                    <div class="user-proffesion">Ui UX Designer</div>
+                    <p class="user-location">795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
+                </div>
+                <footer class="user-socials">
+                    <div>
+                        <button class="user-socials-btn">Follow</button>
+                        <button class="user-socials-btn">Message</button>
+                    </div>
+                    <ul class="user-socials-list">
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-behance"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    </ul>
+                </footer>
+            </div>
+        </article>
+        <article class="user-card">
+            <img class="user-card-photo" src="./assets/img/profile_photo_boy.jpg" alt="Profile photo boy">
+            <div class="user-info">
+                <div>
+                    <h2 class="user-name"><span>Michael</span> Deo</h2>
+                    <div class="user-proffesion">Ui UX Designer</div>
+                    <p class="user-location">795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
+                </div>
+                <footer class="user-socials">
+                    <div>
+                        <button class="user-socials-btn">Follow</button>
+                        <button class="user-socials-btn">Message</button>
+                    </div>
+                    <ul class="user-socials-list">
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-behance"></i></a></li>
+                        <li class="user-socials-item"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    </ul>
+                </footer>
+            </div>
+        </article>
+    </section>
     
 </body>
 </html>
